--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "proxy": "http://localhost:5000",
+    "proxy": "http://localhost:3000",
     "react": "^17.0.2",
+    "react-admin": "^3.19.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.5",
     "react-responsive-carousel": "^3.2.20",
