--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "proxy": "http://localhost:3000",
+    "ra-data-simple-rest": "^3.19.2",
     "react": "^17.0.2",
     "react-admin": "^3.19.2",
     "react-dom": "^17.0.2",
