--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "proxy": "http://localhost:3000",
+    "proxy": "http://localhost:5000",
+    "query-string": "^7.0.1",
+    "ra-data-json-server": "^3.19.4",
     "ra-data-simple-rest": "^3.19.2",
     "react": "^17.0.2",
     "react-admin": "^3.19.2",
