--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "proxy": "http://localhost:1337",
+    "proxy": "https://apiportfoliostrapi.herokuapp.com",
     "query-string": "^7.0.1",
     "ra-data-json-server": "^3.19.4",
     "ra-data-simple-rest": "^3.19.2",
